[metadata]
name = ghostPii
version = 1.0.12
author = Capnion Inc.
author_email = acmueller@capnion.com
description = A private computation package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/capnion/ghostpii_client
project_urls =
    full_repo = https://github.com/capnion/ghostpii_client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy 
    pandas 
    SQLAlchemy 
    scipy
    sympy
    IPython

[options.packages.find]
where = src
